# greybus-zephyr-Beagleboard.org

include/greybus/: greybus_protocols.h  service.h  svc.h
subsys/greybus/: Kconfig  Kconfig.sdio  hid-gb.h  hid.c  sdio.c  usb.c
subsys/greybus/platform/: service.c
tests/greybus/integration/sdio/: CMakeLists.txt  prj.conf  testcase.yaml
tests/greybus/integration/sdio/boards/: native_sim.conf  native_sim.overlay
tests/greybus/integration/sdio/dts/bindings/: test,sdhc-stub.yaml
tests/greybus/integration/sdio/src/: main.c  sdhc_stub.c
